fix(AVO-3783): add gap between left and right buttons under video
https://meemoo.atlassian.net/browse/AVO-3783

--- a/src/item/views/ItemDetail.scss
+++ b/src/item/views/ItemDetail.scss
@@ -18,6 +18,7 @@
 	&__action-buttons {
 		display: grid;
 		grid-template-columns: auto auto;
+		gap: $g-spacer-unit;
 
 		&--left,
 		&--right {
